<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lbar8299.aboutme.Cartoons"
    android:id="@+id/cartoonsLayout">

    <TextView android:text="@string/cartoonsText" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#010101"
        android:id="@+id/cartoonsText"
        android:textSize="24dp" />

    <ImageView
        android:layout_width="465dp"
        android:layout_height="570dp"
        android:id="@+id/gravityFallsImage"
        android:layout_below="@+id/cartoonsText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gravity_falls" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24dp" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
