<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lbar8299.aboutme.Reading"
    android:id="@+id/readingLayout">

    <TextView android:text="@string/readingText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readingText"
        android:textStyle="normal"
        android:textColor="#010101"
        android:textSize="24dp" />

    <ImageView
        android:layout_width="450dp"
        android:layout_height="600dp"
        android:id="@+id/stormlightPic"
        android:layout_below="@+id/readingText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/way_of_kings" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24dp" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:layout_alignBottom="@+id/backButton"
        android:layout_alignRight="@+id/readingText"
        android:layout_alignEnd="@+id/readingText"
        android:textSize="24dp" />

</RelativeLayout>
