<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lbar8299.aboutme.Art"
    android:id="@+id/artLayout">

    <TextView android:text="@string/artText" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="#010101"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/artText"
        android:textSize="24dp" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="550dp"
        android:id="@+id/baymax"
        android:background="@drawable/baymax"
        android:layout_below="@+id/artText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/next"
        android:id="@+id/nextButton"
        android:textSize="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24dp" />

</RelativeLayout>
